fix space between menu items (25pixels), add font style text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5),menu item set vertical-align: middle;

--- a/codenvy-ide-core/src/main/resources/com/codenvy/ide/menu/menu.css
+++ b/codenvy-ide-core/src/main/resources/com/codenvy/ide/menu/menu.css
@@ -35,14 +35,15 @@
     .menuBarItemOver,
     .menuBarItemSelected,
     .menuBarItemDisabled {
-        padding-left: 8px;
-        padding-right: 8px;
+        padding-left: 5px;
+        padding-right: 20px;
         cursor: default;
-
         font-family: mainFontFamily;
         font-size: fontMenuSize;
         font-weight: normal;
         font-style: normal;
+        vertical-align: middle;
+        text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
     }
 
     .menuBar {
